fixing alignment

--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -66,8 +66,12 @@ html {
        .film {
         width: 210px;
         height: 312px;
-        border: 1px solid white;
-        margin: 40px 18px 12px 18px;
+        // border: 1px solid white;
+        background: #4D4D4D;
+        box-shadow: 0px 5px 10px #141414;
+        // margin: 40px 18px 12px 18px;
+        margin: 40px 0px 12px 0px;
+
         text-align: center;
         list-style-type: none; 
         padding: 0;
@@ -77,8 +81,9 @@ html {
        ul {
         display: grid;
         grid-template-columns: auto auto auto auto auto;
-        justify-content: center;
-        padding: 0px 0px 0px 0px;
+        justify-content: left;
+        padding: 0px 64px 0px 64px;
+        gap: 24px 36px;
         margin: 0px 0px 0px 0px;
        }
        
